Pictures added and changed

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   </head>
   <body>
     <header class="header">
-      <h1>css flexbox photo gallery</h1>
+      <h1>Photo gallery</h1>
     </header>
     <div class="gallery">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
+        <img src="imgs/aurinkoinentalvi24.jpg">
+        <img src="imgs/huulihuonosti23.jpg">
+        <img src="imgs/ikkunalauta23.jpg">
+        <img src="imgs/joulu23.jpg">
+        <img src="imgs/juna23.jpg">
+        <img src="imgs/mallikuva24.jpg">
+        <img src="imgs/pori24.jpg">
+        <img src="imgs/talvilenkki24.jpg">
+        <img src="imgs/vanhatalvitakki23.jpg">
+        <img src="imgs/untuvapeitto23.jpg">
+        <img src="imgs/syksy23.jpg">
     </div>
   </body>
 </html>
